--- a/WebContent/IndexRegistration.html
+++ b/WebContent/IndexRegistration.html
@@ -242,7 +242,7 @@ select {
 <br>
 <br>
 <br>
-<form name="logon" id="logon" action="" method="post">
+<form name="logon" id="logon" action="RegistrationJSP.jsp" method="post">
   <label class="fieldLabel">First Name:
     <input type="text" name="firstName" size="32" maxlength="25" placeholder="Leeroy" />
   </label>
@@ -259,7 +259,7 @@ select {
     <input type="password" name="password2" size="12" maxlength="12">      
   </label>
   <label class="fieldLabel">Phone Number:
-    <input type="phone" name="phone1" size="12" maxlength="10">      
+    <input name="phone1" size="12" maxlength="10">      
   </label>
   <div class="buttons">
     <input type="submit" name="submit" onclick="return validateForm()" value="Create Account" />
